Created (and linked) recipe page

--- a/recipes/cyprus-stuffed-vine-leaves.html
+++ b/recipes/cyprus-stuffed-vine-leaves.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Cypriot Stuffed Vine Leaves</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/cyprus-stuffed-vine-leaves.html">Koupepia: Cypriot Stuffed Vine Leaves</a>
+    <h1>Koupepia: Cypriot Stuffed Vine Leaves</h1>
 </body>
 </html>
