--- a/index.html
+++ b/index.html
@@ -3,14 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/cyprus-stuffed-vine-leaves.html">Koupepia: Cypriot Stuffed Vine Leaves</a></li>
-        <li><a href="recipes/mexican-quesadillas.html">Mexican Quesadillas</a></li>
-        <li><a href="recipes/greek-baklava.html">Greek Baklava</a></li>
+    <nav class="navbar">
+        <a href="index.html">Home</a>
+        <a href="recipes/">Recipes</a>
+      </nav>
+
+    <h1 class="page-title">Odin Recipes</h1>
+
+    <div class="item-container">
+        <div class="item-box">
+            <a href="recipes/cyprus-stuffed-vine-leaves.html">Koupepia: Cypriot Stuffed Vine Leaves</a>
+        </div>
+        <div class="item-box">
+            <a href="recipes/mexican-quesadillas.html">Mexican Quesadillas</a>
+        </div>
+        <div class="item-box">
+            <a href="recipes/greek-baklava.html">Greek Baklava</a>
+        </div>
+      </div>
 </body>
 </html>
