--- a/recipes/cyprus-stuffed-vine-leaves.html
+++ b/recipes/cyprus-stuffed-vine-leaves.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
-
-    <div class="title" hidden>Cypriot Stuffed Vine Leaves</div>
+    <title>Cypriot Stuffed Vine Leaves</title>
 </head>
-<body>
-    <div>
+    <body>
+        <nav class="navbar">
+            <a href="../index.html">Home</a>
+            <a href="recipes/">Recipes</a>
+        </nav>
+    <div class="main-content">
         <h1 class="main">Koupepia: Cypriot Stuffed Vine Leaves</h1>
         <img src="../images/koupepia.jpg" height="auto" width="400px" alt="cyprus-stuffed-vine-leaves">
     <p>Koupepia (as we call them in Cyprus) are dolmades
         stuffed with ground pork or veal, rice, fresh herbs and
         seasoning, cooked with tomato and lemon juice.</p>
-</div>
+    </div>
 
 <div class="time-info">
     <div class="info-box">
@@ -54,32 +57,26 @@
     </div>
     <div class="recipe-instructions">
       <h1>How to stuff vine leaves, the Cypriot way!</h1>
-      <p>Wash the fresh vine leaves and blanch them for 5 minutes. Add cold water and drain. If using jarred brined grape leaves, wash, rinse and drain them.</p>
-      <ol>
-        <li>Wash the fresh vine leaves and blanch them for 5 minutes. Add cold water and
-            drain. If using jarred brined grape leaves, wash, rinse and drain them.</li>
-        <li>In a skillet heat half of the olive oil and sauté the onion until translucent. Add the
-            ground meat and sauté until it turns white. Add half of the tomato and half of the lemon juice and cook for 5 minutes stirring once in a while.</li>
-        <li>Mix in the remaining ingredients and set aside to cool.</li>
-        <li>Put a leaf on a plate, vein side facing up, remove stem and put about a tbsp of
-            the mixture near the stem.</li>
-        <li>Neatly fold left edge and then right edge and then roll all the way.</li>
-        <li>Wrap up into a cigar shape (don’t fold too tight as the rice will expand during
-            cooking).</li>
-        <li>Repeat with the remaining grape leaves and filling.</li>
-        <li>Place neatly in the pot seam side facing down, starting from the edge, moving in
-            a circle towards the centre. Second and third layers may be placed on top.</li>
-        <li>Add the remaining tomato, olive oil as well as lemon juice and then cover them
-            with a plate (which must be about the size of the pot).</li>
-        <li>Finally add water to cover the plate and bring to a boil, Cover with the lid, reduce
-            heat and simmer for about 30 - 35 minutes.</li>
-        <li>Allow to rest for a while before serving.</li>
-        <li>Serve with Greek yoghurt.</li>
-
-    </ol>
+      <p>Wash the fresh vine leaves and blanch them for 5 minutes. Add cold water and
+        drain. If using jarred brined grape leaves, wash, rinse and drain them.</p>
+        <p>In a skillet heat half of the olive oil and sauté the onion until translucent. Add the
+        ground meat and sauté until it turns white. Add half of the tomato and half of the lemon juice and cook for 5 minutes stirring once in a while.</p>
+        <p>Mix in the remaining ingredients and set aside to cool.</p>
+        <p>Put a leaf on a plate, vein side facing up, remove stem and put about a tbsp of
+        the mixture near the stem.</p>
+        <p>Neatly fold left edge and then right edge and then roll all the way.</p>
+        <p>Wrap up into a cigar shape (don’t fold too tight as the rice will expand during
+        cooking).</p>
+        <p>Repeat with the remaining grape leaves and filling.</p>
+        <p>Place neatly in the pot seam side facing down, starting from the edge, moving in
+        a circle towards the centre. Second and third layers may be placed on top.</p>
+        <p>Add the remaining tomato, olive oil as well as lemon juice and then cover them
+        with a plate (which must be about the size of the pot).</p>
+        <p>Finally add water to cover the plate and bring to a boil, Cover with the lid, reduce
+        heat and simmer for about 30 - 35 minutes.</p>
+        <p>Allow to rest for a while before serving.</p>
+        <p>Serve with Greek yoghurt.</p>
     </div>
 </div>
-
-    <div><a href="../index.html"><< Home</a></div>
 </body>
 </html>
