--- a/recipes/cyprus-stuffed-vine-leaves.html
+++ b/recipes/cyprus-stuffed-vine-leaves.html
@@ -8,6 +8,7 @@
 </head>
     <body>
         <nav class="navbar">
+            <button class="menu-toggle" onclick="toggleMenu()">☰</button>
             <a href="../index.html">Home</a>
             <a href="recipes/">Recipes</a>
         </nav>
