--- a/recipes/greek-baklava.html
+++ b/recipes/greek-baklava.html
@@ -1,37 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <title>Greek Baklava</title>
+  </head>
+  <body>
+    <nav class="navbar">
+      <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+      <div class="nav-links">
+        <a href="../index.html">Home</a>
+      </div>
+    </nav>
+    <div class="logo">
+      <a href="#"><img src="../images/odin-logo.png" alt="Odin recipes" /></a>
+    </div>
+    <div class="main-content">
+      <h1 class="title">Greek Baklava</h1>
+      <img src="../images/greek-baklava.jpeg" alt="greek-baklava" />
+      <p>Greek Baklava is....</p>
+    </div>
 
-    <title>Title</title>
-</head>
-<body>
-    <h1>Title</h1>
-    <img src="../images/image.jpg" height="auto" width="400px" alt="">
-    <h2>Description</h2>
+    <div class="time-info">
+      <div class="info-box">
+        <span class="label">PREP TIME</span>
+        <span class="value">?</span>
+      </div>
+      <div class="info-box">
+        <span class="label">COOK TIME</span>
+        <span class="value">?</span>
+      </div>
+      <div class="info-box">
+        <span class="label">TOTAL TIME</span>
+        <span class="value">?</span>
+      </div>
+    </div>
 
-        <p>PREP TIME 
-        ? minutes</p>
-        
-        <p>COOK TIME
-        ? minutes</p>
-        
-        <p>TOTAL TIME
-        ? hour ? minutes</p>
-
-    <strong>Ingredients:</strong>
-    <ul>
-        <li></li>
-    </ul>
-
-    <h2>How to...</h2>
-    <p>
-        <ol>
-            <li></li>
-        </ol>
-    </p>
-    <div><a href="../index.html"><< Home</a></div>
-</body>
+    <div class="recipe-container">
+      <div class="ingredients-list">
+        <strong>Ingredients:</strong>
+        <ul>
+          <li>?</li>
+        </ul>
+      </div>
+      <div class="recipe-instructions">
+        <h1>How to make Greek Baklava!</h1>
+        <p>?</p>
+      </div>
+    </div>
+  </body>
 </html>
