--- a/recipes/cypriot-stuffed-vine-leaves.html
+++ b/recipes/cypriot-stuffed-vine-leaves.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/styles.css" />
+    <script src="../scripts.js"></script>
     <title>Cypriot Stuffed Vine Leaves</title>
   </head>
 
   <body>
     <nav class="navbar">
       <button class="menu-toggle" onclick="toggleMenu()">☰</button>
-
       <div class="nav-links">
         <a href="../index.html">Home</a>
       </div>
